data/derived/fa15/progs/unify/prog2494.ml.out
Characters 77-87:
  let f a x = let (b::b',c::c') = x in (b+c, b+c) @ a in
                                       ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
